--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Ben Welsh (@palewire)
 Shane Shifflett (@shaneshifflett)
 James McKinney (@mckinneyjames)
 Michael Mulley (@michaelmulley)
+Joshua Tauberer (@joshdata)
