Add Paul Tagliamonte to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,4 @@ Shane Shifflett (@shaneshifflett)
 James McKinney (@mckinneyjames)
 Michael Mulley (@michaelmulley)
 Joshua Tauberer (@joshdata)
+Paul Tagliamonte
