Add James Turk to AUTHORS, following order in django-boundaryservice

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Anders Eriksen (@anderseri)
 Ben Welsh (@palewire)
 Shane Shifflett (@shaneshifflett)
 James McKinney (@mckinneyjames)
+James Turk (@jamesturk)
 Michael Mulley (@michaelmulley)
 Joshua Tauberer (@joshdata)
-Paul Tagliamonte
+Paul Tagliamonte (@paultag)
